# web-chat-game

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  llm_client.py  prompts.py  tools.py
config/: boss_ragnaros.yaml  team_claude.yaml  team_deepseek.yaml  team_mixed.yaml  team_openai.yaml
game/: __init__.py  boss.py  character.py  combat.py  engine.py  events.py  skills.py
web/: server.py
web/static/: game.js  index.html  style.css  ws.js
web/static/scenes/: BattleScene.js  BootScene.js  UIScene.js
